2010-01-12  Ben Murdoch  <benm@google.com>

Reviewed by Darin Adler.

        Form Reset : Press Back Button and Reset , TextareaElemnt is not set to Default Value
        https://bugs.webkit.org/show_bug.cgi?id=31539

        Added manual test: manual-tests/textarea-reset-default-value.html.

        * html/HTMLTextAreaElement.cpp:
        (WebCore::HTMLTextAreaElement::restoreFormControlState): set the value, rather than default value of a text area when restoring its state. This allows resetting a form with a textarea to work correctly after its state has been restored.
        * manual-tests/resources/textarea-form-back-on-submit.html: Added.
        * manual-tests/textarea-reset-default-value.html: Added.

Canonical link: https://commits.webkit.org/44540@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53132 268f45cc-cd09-0410-ab3c-d52691b4dbfc